[tool.poetry]
name = "hub"
version = "0.1.0"
description = ""
authors = ["linuseing <linus@r13.de>"]

[tool.poetry.dependencies]
python = "^3.8"
voluptuous = "^0.12.1"
pytz = "^2021.1"
PyYAML = "^5.4.1"
paho-mqtt = "^1.5.1"
ariadne = "^0.12.0"
uvicorn = {extras = ["standard"], version = "^0.13.4"}
aiohue = "^2.2.0"
aiohttp_cors = "^0.7.0"
asyncspotify = "^0.12.1"
docstring-parser = "^0.7.3"
aioconsole = "^0.3.1"
Hypercorn = "^0.11.2"
asyncio-multisubscriber-queue = "^0.2.5"
"discord.py" = "^1.6.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pre-commit = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
